--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -40,10 +40,10 @@
         <h1>لوحة التحكم</h1>
 
         <div class="admin-cards">
-          <div class="card">👤 المستخدمون</div>
-          <div class="card">📚 الدورات</div>
-          <div class="card">🏆 الشهادات</div>
-          <div class="card">🧪 الاختبارات</div>
+          <div class="card" id="usersCard">👤 المستخدمون: <span>0</span></div>
+          <div class="card" id="coursesCard">📚 الدورات: <span>0</span></div>
+          <div class="card" id="certificatesCard">🏆 الشهادات: <span>0</span></div>
+          <div class="card" id="testsCard">🧪 الاختبارات: <span>0</span></div>
         </div>
       </div>
 
