--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/css/footer.css">
 
   <!-- CSS الأدمن -->
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 
 <body>
