--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -62,9 +62,9 @@
 <script type="module" src="/js/footer.js"></script>
 
 <!-- ===== JS الأدمن ===== -->
-<script type="module" src="js/admin-guard.js"></script>
-<script type="module" src="js/admin-layout.js"></script>
-<script type="module" src="js/dashboard.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/dashboard.js"></script>
 
 </body>
 </html>
