--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 <body>
 
@@ -47,9 +47,10 @@
 <script type="module" src="/js/header.js"></script>
 <script type="module" src="/js/footer.js"></script>
 
-<script type="module" src="js/admin-guard.js"></script>
-<script type="module" src="js/admin-layout.js"></script>
-<script type="module" src="js/courses-admin.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/courses-admin.js"></script>
 
 </body>
 </html>
+
