--- a/admin/add-course.html
+++ b/admin/add-course.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/footer.css">
 
   <!-- CSS الأدمن -->
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 
 <body>
@@ -69,9 +69,9 @@
 <script type="module" src="/js/footer.js"></script>
 
 <!-- JS الأدمن -->
-<script type="module" src="js/admin-guard.js"></script>
-<script type="module" src="js/admin-layout.js"></script>
-<script type="module" src="js/add-course.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/add-course.js"></script>
 
 </body>
 </html>
