--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/footer.css">
 
   <!-- CSS الأدمن -->
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 
 <body>
@@ -58,9 +58,10 @@
 <script type="module" src="/js/footer.js"></script>
 
 <!-- ===== JS الأدمن ===== -->
-<script type="module" src="js/admin-guard.js"></script>
-<script type="module" src="js/admin-layout.js"></script>
-<script type="module" src="js/manage-users.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/manage-users.js"></script>
 
 </body>
 </html>
+
