--- a/admin/users.html
+++ b/admin/users.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/css/footer.css">
 
   <!-- CSS الأدمن -->
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 <body>
 
@@ -51,9 +51,10 @@
 <script type="module" src="/js/header.js"></script>
 <script type="module" src="/js/footer.js"></script>
 
-<script type="module" src="js/admin-guard.js"></script>
-<script type="module" src="js/admin-layout.js"></script>
-<script type="module" src="js/users.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/users.js"></script>
 
 </body>
 </html>
+
