--- a/admin/partials-admin/topbar.html
+++ b/admin/partials-admin/topbar.html
@@ -22,7 +22,7 @@
     <!-- معلومات الأدمن -->
     <div class="topbar-user">
       <span id="adminName">Admin</span>
-      <img src="/images/admin-avatar.png" alt="Admin" class="user-pic">
+      <img src="/assets/images/admin-avatar.png" alt="Admin" class="user-pic">
       <div class="dropdown-menu">
         <a href="settings-admin.html">الإعدادات</a>
         <a href="#" id="admin-logout">تسجيل الخروج</a>
@@ -61,3 +61,4 @@
     });
   });
 </script>
+
