--- a/index.html
+++ b/index.html
@@ -6,29 +6,62 @@
 
   <title>CourseHub - تعلم واحصل على شهادتك</title>
   <meta name="description" content="CourseHub – تعلم أي مهارة، احصل على شهادتك، وابدأ رحلتك التعليمية الآن.">
-  <meta name="keywords" content="دورات, تعلم, شهادة, كورس, تطوير, تصميم, AI">
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/footer.css">
-
-  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <!-- Main JS (تحميل الهيدر والفوتر وإدارة حالة المستخدم) -->
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getFirestore, collection, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDa84fRquyZah629wkTZACFVVZ7Gmnk1MY",
+      authDomain: "coursehub-23ed2.firebaseapp.com",
+      projectId: "coursehub-23ed2",
+      storageBucket: "coursehub-23ed2.firebasestorage.app",
+      messagingSenderId: "367073521017",
+      appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // عرض أحدث 3 دورات
+    async function loadLatestCourses() {
+      try {
+        const q = query(collection(db, "courses"), orderBy("createdAt", "desc"), limit(3));
+        const snapshot = await getDocs(q);
+        const courses = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+        const container = document.querySelector('.popular-courses .courses-grid');
+        container.innerHTML = "";
+        courses.forEach(course => {
+          const div = document.createElement('div');
+          div.className = 'card';
+          div.innerHTML = `
+            <img src="${course.image || 'assets/images/default-course.png'}" alt="${course.title}">
+            <div class="card-content">
+              <h3>${course.title}</h3>
+              <p>${course.description || ""}</p>
+              <a href="course-detail.html?id=${course.id}" class="btn btn-card">عرض الدورة</a>
+            </div>
+          `;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        console.error("خطأ في تحميل أحدث الدورات:", err);
+      }
+    }
+
+    loadLatestCourses();
+  </script>
 </head>
 
 <body>
-
-  <!-- Header -->
   <div id="header-placeholder"></div>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <h1>ابدأ رحلتك التعليمية الآن!</h1>
@@ -37,20 +70,17 @@
     </div>
   </section>
 
-  <!-- Features -->
   <section class="features container">
     <div class="feature">
       <i class="fa fa-users fa-2x"></i>
       <h3>آلاف الطلاب</h3>
       <p>انضم إلى مجتمع ضخم من المتعلمين حول العالم.</p>
     </div>
-
     <div class="feature">
       <i class="fa fa-certificate fa-2x"></i>
       <h3>شهادات معتمدة</h3>
       <p>احصل على شهادة رسمية عند إتمام الدورة بنجاح.</p>
     </div>
-
     <div class="feature">
       <i class="fa fa-laptop-code fa-2x"></i>
       <h3>دورات احترافية</h3>
@@ -58,44 +88,13 @@
     </div>
   </section>
 
-  <!-- Popular Courses -->
   <section class="popular-courses container">
     <h2>الدورات الأكثر شعبية</h2>
-
     <div class="courses-grid">
-
-      <div class="card">
-        <img src="assets/images/course1.jpg" alt="تطوير الويب للمبتدئين">
-        <div class="card-content">
-          <h3>تطوير الويب للمبتدئين</h3>
-          <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="assets/images/course2.jpg" alt="الذكاء الاصطناعي">
-        <div class="card-content">
-          <h3>الذكاء الاصطناعي</h3>
-          <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="assets/images/course3.jpg" alt="التصميم الجرافيكي">
-        <div class="card-content">
-          <h3>التصميم الجرافيكي</h3>
-          <p>تعلم Photoshop و Illustrator من الصفر.</p>
-          <a href="course-detail.html" class="btn btn-card">عرض الدورة</a>
-        </div>
-      </div>
-
+      <!-- سيتم ملؤها ديناميكيًا -->
     </div>
   </section>
 
-  <!-- Footer -->
   <div id="footer-placeholder"></div>
-
 </body>
 </html>
