--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     loadLatestCourses();
   </script>
 </head>
-
+<script type="module" src="js/main.js" defer></script>
 <body>
   <div id="header-placeholder"></div>
 
