--- a/courses.html
+++ b/courses.html
@@ -25,6 +25,8 @@
     .empty-msg { text-align: center; font-size: 16px; color: #666; margin-top: 20px; }
   </style>
 </head>
+  <script type="module" src="js/main.js" defer></script>
+
 <body>
   <!-- Header Placeholder -->
   <div id="header-placeholder"></div>
