--- a/admin/add-course.html
+++ b/admin/add-course.html
@@ -86,9 +86,9 @@
 <script type="module" src="/js/header.js"></script>
 <script type="module" src="/js/footer.js"></script>
 
-<script type="module" src="/js-admin/admin-layout.js"></script>
-<script type="module" src="/js-admin/admin-guard.js"></script>
-<script type="module" src="/js-admin/add-course.js"></script>
+<script type="module" src="js-admin/admin-layout.js"></script>
+<script type="module" src="js-admin/admin-guard.js"></script>
+<script type="module" src="js-admin/add-course.js"></script>
 
 </body>
 </html>
